<resources>
    <string name="app_name">BandB</string>
    <string name="anagrafica">Anagrafica</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="camere">Camere</string>
    <string name="foto_camera_verde">https://www.bbagape.it/images/camera_verde/bbagape_camera_verde_00005.jpg</string>
    <string name="verde">verde</string>
    <string name="blu">blu</string>
    <string name="arancione">arancione</string>
    <string name="foto_camera_blu">http://www.bbresidenzaalba.it/images/camere/blu//bbresidenzaalba_camera-blu-1.jpg</string>
    <string name="foto_camera_arancione">https://media-cdn.tripadvisor.com/media/photo-s/0e/29/1f/c4/camera-arancione-6-posti.jpg</string>
    <string name="dettagli_prenotazione">Dettagli prenotazione</string>
    <string name="dettagli_camera">Dettagli camera</string>
    <string name="dettagli_ospite">Dettagli ospite</string>
    <string name="elimina_prenotazione">Elimina prenotazione</string>
    <string name="preload_demo">Preload Demo</string>
    <string name="nuova_prenotazione">Nuova prenotazione</string>
    <string name="clear_database">Clear database</string>
    <string name="ospite">Ospite:</string>
    <string name="camera">Camera:</string>
    <string name="check_in">Check In:</string>
    <string name="check_out">Check-Out:</string>
    <string name="aggiungi_prenotazione">Aggiungi Prenotazione</string>
    <string name="ospiti">Ospiti</string>
    <string name="nuovo_ospite">Nuovo Ospite</string>
    <string name="nome">Nome</string>
    <string name="aggiungi_ospite">Aggiungi Ospite</string>
    <string name="elimina_ospite">Elimina ospite</string>
    <string name="nome_camera">Nome camera</string>
    <string name="salva">Salva</string>
    <string name="posti_letto">Posti Letto</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="tv_in_camera">TV in camera</string>
    <string name="prezzo_per_notte">Prezzo per notte</string>
    <string name="bagno_in_camera">Bagno in camera</string>

</resources>
