<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_layout"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nome_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nome_camera" />

                    <EditText
                        android:id="@+id/nome_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLines="1"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/letti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posti_letto"/>

                <NumberPicker
                    android:id="@+id/letti_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_in_camera"/>

                <RadioGroup
                    android:id="@+id/tv_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/tvSi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/tvNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bagno_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bagno_in_camera"/>

                <RadioGroup
                    android:id="@+id/bagno_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/bagnoSi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/bagnoNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prezzo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prezzo_per_notte"/>

                <EditText
                    android:id="@+id/prezzo_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/salva_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/salva"
            android:gravity="center"
            android:padding="15dp" />
    </LinearLayout>

</RelativeLayout>